# CMakeTest

./: CMakeLists.txt  README.md
cJson/: cJSON.cpp
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  demo
others/: myfile.cpp  myfile.h
src/c/: cmake_template_version.h.in  main.cpp
src/c/Log/: LogInner.cpp  LogInner.h  LogOuter.cpp  LogOuter.h  LogUtils.h
src/c/math/: add.c  add.h
